refactor: Adjust the common and contrib schemas
1. adjust the common schemas
2. adjust the contrib schemas
3. just use schemas directly because all include in __init__.py
4. update swagger.json file
