# skyline_apiserver/api/v1/setting.py
@@ -39,8 +39,8 @@ def assert_setting_key_exist(key: str):
     description="Get a setting item.",
     responses={
         200: {"model": schemas.Setting},
-        401: {"model": schemas.common.UnauthorizedMessage},
-        404: {"model": schemas.common.NotFoundMessage},
+        401: {"model": schemas.UnauthorizedMessage},
+        404: {"model": schemas.NotFoundMessage},
     },
     response_model=schemas.Setting,
     status_code=status.HTTP_200_OK,
@@ -63,10 +63,9 @@ async def show_setting(
     description="Update a setting item.",
     responses={
         200: {"model": schemas.Setting},
-        401: {"model": schemas.common.UnauthorizedMessage},
-        403: {"model": schemas.common.ForbiddenMessage},
-        404: {"model": schemas.common.NotFoundMessage},
-        422: {"model": schemas.common.UnprocessableEntityMessage},
+        401: {"model": schemas.UnauthorizedMessage},
+        403: {"model": schemas.ForbiddenMessage},
+        404: {"model": schemas.NotFoundMessage},
     },
     response_model=schemas.Setting,
     status_code=status.HTTP_200_OK,
@@ -94,7 +93,7 @@ async def update_setting(
     description="Get all settings.",
     responses={
         200: {"model": schemas.Settings},
-        401: {"model": schemas.common.UnauthorizedMessage},
+        401: {"model": schemas.UnauthorizedMessage},
     },
     response_model=schemas.Settings,
     status_code=status.HTTP_200_OK,
@@ -125,9 +124,9 @@ async def list_settings(
     description="Reset a setting item to default",
     responses={
         204: {"model": None},
-        401: {"model": schemas.common.UnauthorizedMessage},
-        403: {"model": schemas.common.ForbiddenMessage},
-        404: {"model": schemas.common.NotFoundMessage},
+        401: {"model": schemas.UnauthorizedMessage},
+        403: {"model": schemas.ForbiddenMessage},
+        404: {"model": schemas.NotFoundMessage},
     },
     status_code=status.HTTP_204_NO_CONTENT,
     response_description="No Content",
