# skyline_apiserver/schemas/__init__.py
@@ -12,8 +12,17 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-from . import common
-from .contrib import ContribListKeystoneEndpointsResponseModel
+# flake8: noqa: F401
+
+from .common import (
+    BadRequestMessage,
+    ForbiddenMessage,
+    InternalServerErrorMessage,
+    Message,
+    NotFoundMessage,
+    UnauthorizedMessage,
+)
+from .contrib import KeystoneEndpoints
 from .extension import (
     ExtListComputeServicesResponse,
     ExtListPortsResponse,
@@ -44,44 +53,3 @@ from .prometheus import (
     PrometheusQueryResult,
 )
 from .setting import Setting, Settings, UpdateSetting
-
-__all__ = (
-    "common",
-    "ContribListKeystoneEndpointsResponseModel",
-    "Credential",
-    "Domain",
-    "ExtListComputeServicesResponse",
-    "ExtListPortsResponse",
-    "ExtListRecycleServersResponse",
-    "ExtListServersResponse",
-    "ExtListVolumeSnapshotsResponse",
-    "ExtListVolumesResponse",
-    "ExtPortDeviceOwner",
-    "ExtPortSortKey",
-    "ExtPortStatus",
-    "ExtRecycleServerSortKey",
-    "ExtServerSortKey",
-    "ExtServerStatus",
-    "ExtSortDir",
-    "ExtVolumeSnapshotSortKey",
-    "ExtVolumeSnapshotStatus",
-    "ExtVolumeSortKey",
-    "ExtVolumeStatus",
-    "License",
-    "Payload",
-    "Policies",
-    "PoliciesRules",
-    "Profile",
-    "Project",
-    "Region",
-    "Role",
-    "Setting",
-    "Settings",
-    "UpdateSetting",
-    "PrometheusQueryResponse",
-    "PrometheusQueryData",
-    "PrometheusQueryResult",
-    "PrometheusQueryRangeResponse",
-    "PrometheusQueryRangeData",
-    "PrometheusQueryRangeResult",
-)
